styra/styra-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: styra-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - styra.boul.nl
    secretName: styra-tls
  rules:
  - host: styra.boul.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: styra
          servicePort: 80
      # - path: /api
      #   backend:
      #     serviceName: styra-api
      #     servicePort: 8081
